--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,10 @@ body {
   bottom: 0px;
   z-index: -1;
 }
+
+#weather {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
