--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
+/* init */
 * {
+  margin: 0px;
+  list-style-type: none;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -7,10 +10,15 @@ body {
   background-color: beige;
 }
 
+/* javascript */
 .hidden {
-  display: none;
+  visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
 }
 
+/* background */
 .background {
   position: absolute;
   width: 100%;
@@ -22,20 +30,126 @@ body {
   z-index: -1;
 }
 
+/* weather */
 #weather {
   display: flex;
+  align-items: flex-end;
+  justify-content: right;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  z-index: 99;
 }
 
 .weather-info {
-  background-color: rgba(243, 234, 234, 0.6);
+  background-color: rgba(243, 234, 234, 0.4);
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+.weather-icon img {
+  width: 80px;
+  height: 80px;
 }
 
 .weather-icon span {
   cursor: pointer;
+}
+
+/* quotes */
+.quotes {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 90%;
+  margin-bottom: 12px;
+}
+
+.quotes p {
+  margin-bottom: 10px;
+  font-weight: 600;
+  font-family: "Aldrich";
+}
+
+.quotes p:first-child {
+  font-size: 26px;
+}
+
+.quotes p:nth-child(2) {
+  font-size: 20px;
+}
+
+/* container */
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+}
+
+/* todo */
+#todo-form {
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#todo-form label {
+  font-weight: 600;
+  font-size: 38px;
+  font-family: "Hi Melody";
+}
+
+#todo-form input {
+  border-radius: 10px;
+  border: 4px solid rgba(250, 247, 63, 0.4);
+  padding: 8px;
+  margin-right: 6px;
+}
+
+#todo-form input:hover {
+  border: 4px solid rgba(250, 247, 63, 1);
+  transition: 0.5s ease-in-out;
+}
+
+#todo-form button {
+  cursor: pointer;
+  padding: 8px;
+  color: rgb(248, 237, 237);
+  font-weight: 500;
+  background-color: rgb(120, 120, 219);
+  border: 1px solid rgb(78, 78, 241);
+}
+
+.todos {
+  width: 50%;
+}
+
+.todos li {
+  margin-bottom: 8px;
+}
+
+.todos span {
+  font-family: "Hi Melody";
+  font-weight: 600;
+  font-size: 26px;
+  color: rgb(17, 16, 16);
+  border-bottom: 1px solid rgb(17, 16, 16);
+  padding-bottom: 2px;
+  margin-right: 8px;
+  word-wrap: break-word;
+}
+
+.todos button {
+  cursor: pointer;
+  padding: 2px;
+  color: rgb(248, 237, 237);
+  font-weight: 500;
+  background-color: rgb(157, 194, 23);
+  border: 1px solid rgb(113, 141, 12);
 }
