--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 /* init */
 * {
   margin: 0px;
-  list-style-type: none;
+  list-style-type: circle;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
-  background-color: beige;
+  background-color: rgb(109, 201, 86);
 }
 
 /* javascript */
@@ -18,8 +18,12 @@ body {
   padding: 5px;
 }
 
+.none {
+  display: none;
+}
+
 /* background */
-.background {
+/* .background {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -28,6 +32,18 @@ body {
   right: 0px;
   bottom: 0px;
   z-index: -1;
+} */
+
+.background-remote {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0px 14px;
+}
+
+.background-remote span {
+  font-size: 28px;
+  cursor: pointer;
 }
 
 /* weather */
@@ -40,10 +56,11 @@ body {
 }
 
 .weather-info {
-  background-color: rgba(243, 234, 234, 0.4);
+  border: 1px solid rgba(0, 0, 0, 0.7);
+  background-color: rgba(255, 244, 244, 0.733);
   display: flex;
   flex-direction: column;
-  padding: 5px;
+  padding: 10px;
   border-radius: 10px;
 }
 
@@ -54,6 +71,76 @@ body {
 
 .weather-icon span {
   cursor: pointer;
+}
+
+/* greeting */
+#greeting-form {
+  margin-bottom: 20px;
+}
+#greeting-form input {
+  border: 3px solid rgb(32, 30, 30);
+  padding: 8px;
+  font-size: 18px;
+  font-weight: 600;
+  margin-right: 8px;
+}
+
+#greeting-form input::placeholder {
+  font-weight: 600;
+  text-align: center;
+}
+
+#greeting-form button {
+  cursor: pointer;
+  padding: 10px;
+  background: rgb(48, 30, 30);
+  border: 2px solid rgb(17, 15, 15);
+  color: white;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.username {
+  text-align: center;
+  height: 32px;
+  margin-bottom: 14px;
+}
+
+.question {
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 14px;
+}
+
+.condition {
+  border: 2px solid rgba(0, 0, 0, 0.4);
+  padding: 6px;
+  margin-bottom: 20px;
+}
+
+.condition div {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.basic {
+  font-size: 40px;
+  color: rgba(0, 0, 0, 0.2);
+}
+
+.condition span:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+.checked {
+  color: rgb(0, 0, 0);
+  transition: 0.5s ease-out;
 }
 
 /* quotes */
@@ -78,18 +165,20 @@ body {
 
 .quotes p:nth-child(2) {
   font-size: 20px;
+  font-family: "Jua";
 }
 
 /* container */
 .container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   flex-direction: column;
-  height: 100%;
-  width: 100%;
 }
 
+.container div:first-child {
+  width: 60%;
+}
 /* todo */
 #todo-form {
   margin-bottom: 30px;
@@ -127,7 +216,16 @@ body {
 }
 
 .todos {
-  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: row;
+  width: 100%;
+}
+
+.todos div {
+  overflow-wrap: break-word;
+  overflow: auto;
 }
 
 .todos li {
@@ -142,14 +240,13 @@ body {
   border-bottom: 1px solid rgb(17, 16, 16);
   padding-bottom: 2px;
   margin-right: 8px;
-  word-wrap: break-word;
 }
 
 .todos button {
   cursor: pointer;
-  padding: 2px;
+  padding: 4px;
   color: rgb(248, 237, 237);
   font-weight: 500;
-  background-color: rgb(157, 194, 23);
-  border: 1px solid rgb(113, 141, 12);
+  background-color: rgb(155, 35, 35);
+  border: 1px solid rgb(37, 1, 1);
 }
