--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,6 @@
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-body {
-  background-color: rgb(109, 201, 86);
-}
-
 /* javascript */
 .hidden {
   visibility: hidden;
@@ -22,17 +18,36 @@ body {
   display: none;
 }
 
-/* background */
-/* .background {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0px;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  z-index: -1;
-} */
+/* mediaQuery */
+@media (max-width: 620px) {
+  .resize {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(77, 68, 67);
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    right: 0px;
+    bottom: 0px;
+    z-index: 99;
+  }
+
+  .resize-notify {
+    color: white;
+    font-size: 30px;
+    font-weight: 600;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  }
+
+  body {
+    overflow-y: hidden;
+    overflow-x: hidden;
+  }
+}
 
 .background-remote {
   display: flex;
@@ -218,14 +233,14 @@ body {
 .todos {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  flex-direction: row;
-  width: 100%;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.todos div {
+#todos-list {
+  width: 30%;
   overflow-wrap: break-word;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .todos li {
